--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 spring.datasource.username = root
 
 #2 - obrigatorio - senha do banco
-spring.datasource.password = mysql
+spring.datasource.password = mJk1jxb1kx678Xks5MZP
 
 #3 - url do banco
-spring.datasource.url = jdbc:mysql://localhost:3306/db_livros
+spring.datasource.url = jdbc:mysql://containers-us-west-22.railway.app:7041/railway
  
 #4 - dialeto do banco
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
